--- a/Elibrary/Site1.Master
+++ b/Elibrary/Site1.Master
@@ -71,10 +71,10 @@
                               <asp:LinkButton class="nav-link" ID="usersignupButton" runat="server" OnClick="usersignup_Click">Sign up</asp:LinkButton>
                           </li>
                           <li class="nav-item active">
-                              <asp:LinkButton class="nav-link" ID="logoutButton" runat="server" OnClick="logout_Click" Visible="False">Logout</asp:LinkButton>
+                              <asp:LinkButton class="nav-link" ID="logoutButton" runat="server" OnClick="logout_Click" onclientclick="javascript:return confirm('Are you sure log out？');" Visible="False">Logout</asp:LinkButton>
                           </li>
                           <li class="nav-item active">
-                              <asp:LinkButton class="nav-link" ID="HelloUserButton" runat="server" Visible="False">Hello User</asp:LinkButton>
+                              <asp:LinkButton class="nav-link" ID="HelloUserButton" runat="server" Visible="False" OnClick="HelloUserButton_Click">Hello User</asp:LinkButton>
                           </li>                          
                       </ul>
 
